Library/AXL(Library)/C, C++/AXD.h

// Read data level by bit unit in Offset position of specified extended output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by bit unit between output index.(0~15)
// *upValue    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD   __stdcall AxdReadExtOutportBit(long lModuleNo, long lOffset, DWORD *upValue);
// Read data level by byte unit in Offset position of specified extended output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by byte unit between output index.(0~1)
// *upValue    : 0x00 ~ 0x0FF
//===============================================================================================//
DWORD   __stdcall AxdReadExtOutportByte(long lModuleNo, long lOffset, DWORD *upValue);
// Read data level by word unit in Offset position of specified extended output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by word unit between output index.(0)
// *upValue    : 0x00 ~ 0x0FFFF
//===============================================================================================//
DWORD   __stdcall AxdReadExtOutportWord(long lModuleNo, long lOffset, DWORD *upValue);
// Read data level by double word unit in Offset position of specified extended output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by dword unit between output index.(0)
// *upValue    : 0x00 ~ 0x0000FFFF
//===============================================================================================//
DWORD   __stdcall AxdReadExtOutportDword(long lModuleNo, long lOffset, DWORD *upValue);
// Output data by bit unit in Offset position of specified extended output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by bit unit between output index.(0~15)
// uValue      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD   __stdcall AxdWriteExtOutportBit(long lModuleNo, long lOffset, DWORD uValue);
// Output data by byte unit in Offset position of specified extended output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by byte unit between output index.(0~1)
// uValue      : 0x00 ~ 0x0FF
//===============================================================================================//
DWORD   __stdcall AxdWriteExtOutportByte(long lModuleNo, long lOffset, DWORD uValue);
// Output data by word unit in Offset position of specified extended output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by word unit between output index.(0~1)
// uValue      : 0x00 ~ 0x0FFFF
//===============================================================================================//
DWORD   __stdcall AxdWriteExtOutportWord(long lModuleNo, long lOffset, DWORD uValue);
// Output data by dword unit in Offset position of specified extended output contact module
//==============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by dword unit between output index.(0)
// uValue      : 0x00 ~ 0x00000FFFF
//===============================================================================================//
DWORD   __stdcall AxdWriteExtOutportDword(long lModuleNo, long lOffset, DWORD uValue);
// Set data level by bit unit in Offset position of specified extended input/output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by bit unit between input/output index.(0~15)
// uLevel      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD   __stdcall AxdLevelSetExtportBit(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by byte unit in Offset position of specified extended input/output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by byte unit between input/output index.(0~1)
// uLevel      : 0x00 ~ 0xFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdLevelSetExtportByte(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by word unit in Offset position of specified extended input/output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by word unit between input/output index.(0)
// uLevel      : 0x00 ~ 0xFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdLevelSetExtportWord(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by dword unit in Offset position of specified extended input/output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by dword unit between input/output index(0)
// uLevel      : 0x00 ~ 0x0000FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdLevelSetExtportDword(long lModuleNo, long lOffset, DWORD uLevel);
// Verify data level by bit unit in Offset position of specified extended input/output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by bit unit between input/output index(0~15)
// uLevel      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD   __stdcall AxdLevelGetExtportBit(long lModuleNo, long lOffset, DWORD *upLevel);
// Verify data level by byte unit in Offset position of specified extended input/output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by byte unit between input/output index(0~1)
// uLevel      : 0x00 ~ 0xFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdLevelGetExtportByte(long lModuleNo, long lOffset, DWORD *upLevel);
// Verify data level by word unit in Offset position of specified extended input/output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by word unit between input/output index(0)
// uLevel      : 0x00 ~ 0xFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdLevelGetExtportWord(long lModuleNo, long lOffset, DWORD *upLevel);
// Verify data level by dword unit in Offset position of specified extended input/output contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by dword unit between input index(0)
// uLevel      : 0x00 ~ 0x0000FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdLevelGetExtportDword(long lModuleNo, long lOffset, DWORD *upLevel);
//========== Advanced API
// Verify if the signal was switched from Off to On in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for input contact
// *upValue    : FALSE(0)
//             : TRUE(1)
//===============================================================================================//
DWORD    __stdcall AxdiIsPulseOn(long lModuleNo, long lOffset, DWORD *upValue);
// Verify if the signal was switched from On to Off in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for input contact
// *upValue    : FALSE(0)
//             : TRUE(1)
//===============================================================================================//
DWORD    __stdcall AxdiIsPulseOff(long lModuleNo, long lOffset, DWORD *upValue);
// Verify if the signal is maintained On state during the calling time as much as count in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for input contact
// lCount      : 0 ~ 0x7FFFFFFF(2147483647)
// *upValue    : FALSE(0)
//             : TRUE(1)
// lStart      : 1
//             : 0
//===============================================================================================//
DWORD    __stdcall AxdiIsOn(long lModuleNo, long lOffset, long lCount, DWORD *upValue, long lStart);