Library/AXL(Library)/Visual Basic/AXD.bas


' Read data level by bit unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between output index.(0~15)
' *upValue    : LOW(0)
'             : HIGH(1)
'==============================================================================================='
Public Declare Function AxdReadExtOutportBit Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long


' Read data level by byte unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by byte unit between output index.(0~1)
' *upValue    : 0x00 ~ 0x0FF
'==============================================================================================='
Public Declare Function AxdReadExtOutportByte Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long


' Read data level by word unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by word unit between output index.(0)
' *upValue    : 0x00 ~ 0x0FFFF
'==============================================================================================='
Public Declare Function AxdReadExtOutportWord Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long


' Read data level by double word unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by dword unit between output index.(0)
' *upValue    : 0x00 ~ 0x0000FFFF
'==============================================================================================='
Public Declare Function AxdReadExtOutportDword Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long


' Output data by bit unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between output index.(0~15)
' uValue      : LOW(0)
'             : HIGH(1)
'==============================================================================================='
Public Declare Function AxdWriteExtOutportBit Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uValue As Long) As Long


' Output data by byte unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by byte unit between output index.(0~1)
' uValue      : 0x00 ~ 0x0FF
'==============================================================================================='
Public Declare Function AxdWriteExtOutportByte Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uValue As Long) As Long


' Output data by word unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by word unit between output index.(0~1)
' uValue      : 0x00 ~ 0x0FFFF
'==============================================================================================='
Public Declare Function AxdWriteExtOutportWord Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uValue As Long) As Long


' Output data by dword unit in Offset position of specified extended output contact module
'==============================================================================================/'
' lModuleNo   : Module number
' lOffset     : Offset position by dword unit between output index.(0)
' uValue    : 0x00 ~ 0x00000FFFF
'==============================================================================================='
Public Declare Function AxdWriteExtOutportDword Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uValue As Long) As Long


' Set data level by bit unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between input/output index.(0~15)
' uLevel      : LOW(0)
'             : HIGH(1)
'==============================================================================================='
Public Declare Function AxdLevelSetExtportBit Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uLevel As Long) As Long


' Set data level by byte unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by byte unit between input/output index.(0~1)
' uLevel      : 0x00 ~ 0xFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelSetExtportByte Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uLevel As Long) As Long


' Set data level by word unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by word unit between input/output index.(0)
' uLevel      : 0x00 ~ 0xFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelSetExtportWord Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uLevel As Long) As Long


' Set data level by dword unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by dword unit between input/output index.(0)
' uLevel      : 0x00 ~ 0x0000FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelSetExtportDword Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal uLevel As Long) As Long


' Verify data level by bit unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between input/output index.(0~15)
' uLevel      : LOW(0)
'             : HIGH(1)
'==============================================================================================='
Public Declare Function AxdLevelGetExtportBit Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal upLevel As Long) As Long


' Verify data level by byte unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by byte unit between input/output index.(0~1)
' uLevel      : 0x00 ~ 0xFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelGetExtportByte Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal upLevel As Long) As Long


' Verify data level by word unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by word unit between input/output index.(0)
' uLevel      : 0x00 ~ 0xFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelGetExtportWord Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal upLevel As Long) As Long


' Verify data level by dword unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by dword unit between input/output index.(0)
' uLevel      : 0x00 ~ 0x0000FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelGetExtportDword Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal upLevel As Long) As Long


'========== Advanced API =================================================================================

' Verify if the signal was switched from Off to On in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for input contact
' *upValue   : FALSE(0)
'            : TRUE(1)
'==============================================================================================='
Public Declare Function AxdiIsPulseOn Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long


' Verify if the signal was switched from On to Off in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for input contact
' *upValue   : FALSE(0)
'            : TRUE(1)
'==============================================================================================='
Public Declare Function AxdiIsPulseOff Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long


' Verify if the signal is maintained On state during the calling time as much as count in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for input contact
' lCount     : 0 ~ 0x7FFFFFFF(2147483647)
' *upValue   : FALSE(0)
'            : TRUE(1)
' lStart     : 1
'            : 0
'==============================================================================================='
Public Declare Function AxdiIsOn Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByVal lCount As Long, ByRef upValue As Long, ByVal lStart As Long) As Long

